Integer|Long.valueOf() are cheaper than new Integer()|Long()
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpclient/trunk@617643 13f79535-47bb-0310-9956-ffa450edef68